[project]
name = "swapd"
version = "0.1.0"
description = ""
authors = [
    { name = "Jesse de Wit", email = "witdejesse@hotmail.com" }
]
license = {text = "MIT"}
dependencies = [
    'black == 24.8.0',
    'docker == 7.1.0',
    'grpcio == 1.68.1',
    'grpcio-tools == 1.68.1',
    'psycopg2-binary == 2.9.9',
    'python-bitcoinlib == 0.11.2',
    'pytest-timeout == 2.3.1',
    'pytest-xdist == 3.6.1',
    'pytest == 7.4.4',
    'pytest-cov == 5.0.0',
    'pyln-client == 24.8.2',
    'pyln-testing == 24.8.2',
    'pyln-proto == 24.8.2'
]

[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

# Ignore flat-layout.
[tool.setuptools]
py-modules = []