[package]
name = "swapd"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
bitcoin = "0.30.2"
clap = { workspace = true, features = ["derive"] }
futures = "0.3.30"
futures-util = "0.3.30"
hex = "0.4.3"
lightning-invoice = "0.31.0"
prost = { workspace = true }
regex = "1.10.6"
reqwest = { version = "0.12.5", features = ["json"] }
ring = "0.17.8"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.127"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
thiserror = "1.0.63"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.11", features = ["rt"] }
tonic = { workspace = true, features = ["tls"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
tonic-build = { workspace = true }
