[package]
name = "swapd"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
bitcoin = "0.32.5"
clap = { workspace = true, features = ["derive"] }
futures = "0.3.31"
futures-util = "0.3.31"
hex = { workspace = true }
lightning-invoice = "0.33.0"
prost = { workspace = true }
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"] }
ring = "0.17.8"
secp256k1 = { git = "https://github.com/rust-bitcoin/rust-secp256k1", rev = "1cc7410df436b73d06db3c8ff7cbb29a78916b06"}
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
thiserror = "2.0.4"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.13", features = ["rt"] }
tonic = { workspace = true, features = ["tls"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
tonic-build = { workspace = true }
